Use non-deprecated method for initialization